<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderPreviewActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/customer_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_layout"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/op_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aaa"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/designation"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/op_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aaa"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_name"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/op_project_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aaa"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_address"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/op_site_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aaa"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_no"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/op_contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aaa"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_time"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/op_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aaa"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/op_order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aaa"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_amount"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/op_order_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aaa"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/order_list_header"
        android:layout_below="@+id/customer_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:textColor="#ffff"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divider"
                android:textSize="20sp"
                android:layout_marginLeft="50dp"
                android:textColor="#ffff"
                android:layout_marginStart="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="15sp"
                android:layout_marginLeft="30dp"
                android:textColor="#ffff"
                android:layout_marginStart="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divider"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:textColor="#ffff"
                android:layout_marginStart="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"
                android:textColor="#ffff"
                android:layout_marginStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divider"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:textColor="#ffff"
                android:layout_marginStart="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"
                android:textColor="#ffff"
                android:layout_marginStart="20dp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ordered_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/order_list_header"
        android:layout_margin="10dp"
        android:layout_above="@+id/upload_btn"/>

    <Button
        android:id="@+id/upload_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/upload"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"/>

</RelativeLayout>