<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/login"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>