<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_below="@id/product_name"
            android:layout_marginLeft="20dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/qty"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginEnd="30dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>