<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <LinearLayout
        android:id="@+id/order_list_header"
        android:layout_below="@+id/customer_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/order_product_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:textColor="#000000"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/order_price"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/order_qty"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                android:textSize="15sp"
                android:layout_marginLeft="30dp"
                android:textColor="#000000"
                android:layout_marginStart="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:textColor="#000000"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/order_product_total"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="15sp"
                android:layout_marginLeft="30dp"
                android:textColor="#000000"
                android:layout_marginStart="30dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>